prql/src/snapshots/prql__materializer__test__materialize_2.snap
---
source: prql/src/materializer.rs
expression: materialize(ast)?
---
Query:
  nodes:
    - Pipeline:
        - From:
            name: employees
            alias: ~
        - Filter:
            - Expr:
                - Ident: country
                - Raw: "="
                - String: USA
        - Derive:
            - NamedExpr:
                name: gross_salary
                expr:
                  Expr:
                    - Ident: salary
                    - Raw: +
                    - Ident: payroll_tax
            - NamedExpr:
                name: gross_cost
                expr:
                  Expr:
                    - Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                    - Raw: +
                    - Ident: benefits_cost
        - Filter:
            - Expr:
                - Expr:
                    - Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                    - Raw: +
                    - Ident: benefits_cost
                - Raw: ">"
                - Raw: "0"
        - Aggregate:
            by:
              - Ident: title
              - Ident: country
            select:
              - SString:
                  - String: AVG(
                  - Expr:
                      Ident: salary
                  - String: )
              - SString:
                  - String: SUM(
                  - Expr:
                      Ident: salary
                  - String: )
              - SString:
                  - String: AVG(
                  - Expr:
                      Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                  - String: )
              - SString:
                  - String: SUM(
                  - Expr:
                      Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                  - String: )
              - SString:
                  - String: AVG(
                  - Expr:
                      Expr:
                        - Expr:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                        - Raw: +
                        - Ident: benefits_cost
                  - String: )
              - NamedExpr:
                  name: sum_gross_cost
                  expr:
                    SString:
                      - String: SUM(
                      - Expr:
                          Expr:
                            - Expr:
                                - Ident: salary
                                - Raw: +
                                - Ident: payroll_tax
                            - Raw: +
                            - Ident: benefits_cost
                      - String: )
              - NamedExpr:
                  name: ct
                  expr:
                    SString:
                      - String: COUNT(*)
        - Sort:
            - Ident: sum_gross_cost
        - Filter:
            - Expr:
                - Ident: sum_gross_cost
                - Raw: ">"
                - Raw: "200"
        - Take: 20

