prql/src/snapshots/prql__materializer__test__materialize_3.snap
---
source: prql/src/materializer.rs
expression: materialize(ast)?
---
Query:
  items:
    - Pipeline:
        - From:
            name: prices
            alias: ~
        - Derive:
            - NamedExpr:
                name: return_total
                expr:
                  SString:
                    - String: "IF(is_valid_price, "
                    - Expr:
                        Expr:
                          - Ident: prices_adj
                          - Raw: /
                          - SString:
                              - String: lag_day_todo(
                              - Expr:
                                  Ident: prices_adj
                              - String: )
                          - Raw: "-"
                          - Raw: "1"
                          - Raw: +
                          - Ident: dividend_return
                    - String: ", NULL)"
            - NamedExpr:
                name: return_usd
                expr:
                  SString:
                    - String: "IF(is_valid_price, "
                    - Expr:
                        Expr:
                          - Ident: prices_usd
                          - Raw: /
                          - SString:
                              - String: lag_day_todo(
                              - Expr:
                                  Ident: prices_usd
                              - String: )
                          - Raw: "-"
                          - Raw: "1"
                          - Raw: +
                          - Ident: dividend_return
                    - String: ", NULL)"
            - NamedExpr:
                name: return_excess
                expr:
                  Expr:
                    - Expr:
                        - SString:
                            - String: "IF(is_valid_price, "
                            - Expr:
                                Expr:
                                  - Ident: prices_adj
                                  - Raw: /
                                  - SString:
                                      - String: lag_day_todo(
                                      - Expr:
                                          Ident: prices_adj
                                      - String: )
                                  - Raw: "-"
                                  - Raw: "1"
                                  - Raw: +
                                  - Ident: dividend_return
                            - String: ", NULL)"
                        - Raw: "-"
                        - Ident: interest_rate
                    - Raw: /
                    - Raw: "252"
            - NamedExpr:
                name: return_usd_excess
                expr:
                  Expr:
                    - Expr:
                        - SString:
                            - String: "IF(is_valid_price, "
                            - Expr:
                                Expr:
                                  - Ident: prices_usd
                                  - Raw: /
                                  - SString:
                                      - String: lag_day_todo(
                                      - Expr:
                                          Ident: prices_usd
                                      - String: )
                                  - Raw: "-"
                                  - Raw: "1"
                                  - Raw: +
                                  - Ident: dividend_return
                            - String: ", NULL)"
                        - Raw: "-"
                        - Ident: interest_rate
                    - Raw: /
                    - Raw: "252"
        - Select:
            - Ident: date
            - Ident: sec_id
            - SString:
                - String: "IF(is_valid_price, "
                - Expr:
                    Expr:
                      - Ident: prices_adj
                      - Raw: /
                      - SString:
                          - String: lag_day_todo(
                          - Expr:
                              Ident: prices_adj
                          - String: )
                      - Raw: "-"
                      - Raw: "1"
                      - Raw: +
                      - Ident: dividend_return
                - String: ", NULL)"
            - SString:
                - String: "IF(is_valid_price, "
                - Expr:
                    Expr:
                      - Ident: prices_usd
                      - Raw: /
                      - SString:
                          - String: lag_day_todo(
                          - Expr:
                              Ident: prices_usd
                          - String: )
                      - Raw: "-"
                      - Raw: "1"
                      - Raw: +
                      - Ident: dividend_return
                - String: ", NULL)"
            - Expr:
                - Expr:
                    - SString:
                        - String: "IF(is_valid_price, "
                        - Expr:
                            Expr:
                              - Ident: prices_adj
                              - Raw: /
                              - SString:
                                  - String: lag_day_todo(
                                  - Expr:
                                      Ident: prices_adj
                                  - String: )
                              - Raw: "-"
                              - Raw: "1"
                              - Raw: +
                              - Ident: dividend_return
                        - String: ", NULL)"
                    - Raw: "-"
                    - Ident: interest_rate
                - Raw: /
                - Raw: "252"
            - Expr:
                - Expr:
                    - SString:
                        - String: "IF(is_valid_price, "
                        - Expr:
                            Expr:
                              - Ident: prices_usd
                              - Raw: /
                              - SString:
                                  - String: lag_day_todo(
                                  - Expr:
                                      Ident: prices_usd
                                  - String: )
                              - Raw: "-"
                              - Raw: "1"
                              - Raw: +
                              - Ident: dividend_return
                        - String: ", NULL)"
                    - Raw: "-"
                    - Ident: interest_rate
                - Raw: /
                - Raw: "252"

