prql/src/snapshots/prql__materializer__test__replace_variables_2.snap
---
source: prql/src/materializer.rs
expression: "&fold.fold_node(ast)?"
---
Query:
  nodes:
    - Pipeline:
        - From:
            name: employees
            alias: ~
        - Filter:
            - Expr:
                - Ident: country
                - Raw: "="
                - String: USA
        - Derive:
            - NamedExpr:
                name: gross_salary
                expr:
                  Expr:
                    - Ident: salary
                    - Raw: +
                    - Ident: payroll_tax
            - NamedExpr:
                name: gross_cost
                expr:
                  Expr:
                    - Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                    - Raw: +
                    - Ident: benefits_cost
        - Filter:
            - Expr:
                - Expr:
                    - Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                    - Raw: +
                    - Ident: benefits_cost
                - Raw: ">"
                - Raw: "0"
        - Aggregate:
            by:
              - Ident: title
              - Ident: country
            select:
              - FuncCall:
                  name: average
                  args:
                    - Ident: salary
                  named_args: []
              - FuncCall:
                  name: sum
                  args:
                    - Ident: salary
                  named_args: []
              - FuncCall:
                  name: average
                  args:
                    - Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                  named_args: []
              - FuncCall:
                  name: sum
                  args:
                    - Expr:
                        - Ident: salary
                        - Raw: +
                        - Ident: payroll_tax
                  named_args: []
              - FuncCall:
                  name: average
                  args:
                    - Expr:
                        - Expr:
                            - Ident: salary
                            - Raw: +
                            - Ident: payroll_tax
                        - Raw: +
                        - Ident: benefits_cost
                  named_args: []
              - NamedExpr:
                  name: sum_gross_cost
                  expr:
                    FuncCall:
                      name: sum
                      args:
                        - Expr:
                            - Expr:
                                - Ident: salary
                                - Raw: +
                                - Ident: payroll_tax
                            - Raw: +
                            - Ident: benefits_cost
                      named_args: []
              - NamedExpr:
                  name: ct
                  expr:
                    Ident: count
        - Sort:
            - Ident: sum_gross_cost
        - Filter:
            - Expr:
                - Ident: sum_gross_cost
                - Raw: ">"
                - Raw: "200"
        - Take: 20

